--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,7 +10,7 @@ source:
   sha256: 35499587f2f5bf12070939769ffdfed76ed9470936dcd9f7c4f93dacf58ce9c4
 
 build:
-  number: 1
+  number: 2
   skip: true  # [(win and vc<14) or ppc64le or py36]
   script: {{ PYTHON }} -m pip install . -vv
 
@@ -32,7 +32,7 @@ requirements:
   run:
     - python
     - robotframework-interpreter  >=0.6.6,<0.7
-    - robotframework-lsp
+    - robotframework-lsp  >=0.12,<0.14
     - jupyterlab_robotmode
     - ipython  >=7.20,<8
     - pygments  >=2.3.1,<3
