--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "xeus-robot-static" %}
-{% set version = "0.3.8" %}
+{% set version = "0.4.1" %}
 
 package:
   name: {{ name|lower }}
@@ -7,7 +7,7 @@ package:
 
 source:
   url: https://github.com/jupyter-xeus/xeus-robot-wheel/archive/{{ version }}.tar.gz
-  sha256: ccc61c8e418fd46a986bb761ffb7bf4eda7b1986acdf192cc16aad5072fecb7e
+  sha256: 2dcc84a1140f2f21fb0ed8066563172d0e8c3f43ec94985274c141f391f9abde
 
 build:
   number: 0
@@ -31,11 +31,10 @@ requirements:
     - nasm                                   # [win]
   run:
     - python
+    - xeus-python-static  >=0.13,<0.14
     - robotframework-interpreter  >=0.7.3,<0.8
     - robotframework-lsp  >=0.14,<0.15
     - jupyterlab_robotmode
-    - ipython  >=7.20,<8
-    - pygments  >=2.3.1,<3
     - ipywidgets
   run_constrained:
     # Add a run constraint on xeus-robot 0.0.0 making it impossible to install both
